<resources>

    <!-- Nome App -->
    <string name="app_name">Napp</string>

    <!-- Tela Login -->
    <string name="sobre_nap">Sobre o NAP</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="txt_cadastrar">Não tem uma conta? <b>Cadastre-se!</b></string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="nap_txt">Núcleo de Apoio Psicopedagógico</string>
    <string name="fatec_ourinhos">Fatec Ourinhos</string>

    <!-- Tela Sobre -->
    <string name="nap_txt_abreviado">SOBRE O NAP</string>
    <string name="txt_explicando_nap">O Núcleo de Apoio Psicopedagógico aos alunos da Fatec Ourinhos, foi implantado a partir do segundo semestre de 2017, tendo como colaboradoras as professoras Rose Prado(Pedagoga), Eunice Sanches Belotti(Psicóloga), Marcela Penteado Rossini e Elaine Pasqualini, tendo como finalidade oferecer recursos que auxilie o aluno no desempenho da sua atividade educativa como também a compreensão das relações intersubjetivas entre aluno-professor-disciplina-mundo do trabalho, em situação escolar resultante de um complexo conjunto de influências psicológicas, sociais, formais e informais</string>
    <string name="txt_objetivos">OBJETIVOS</string>
    <string name="txt_objetivo_1"><b>&#8226;</b> Apoiar alunos que desejam orientação quanto ao aprendizado dos conteúdos abordados no curso;</string>
    <string name="txt_objetivo_2"><b>&#8226;</b> Auxiliar e proporcionar aos discentes informações diversas relacionadas às suas carreiras acadêmica e profissional;</string>
    <string name="txt_objetivo_3"><b>&#8226;</b> Detectar problemas diversos no âmbito educacional, proporcionando acompanhamentos que possibilitem resultados diretos na melhoria e desenvolvimento do curso;</string>
    <string name="txt_objetivo_4"><b>&#8226;</b> Estabelecer convênios, parcerias e encaminhamentos que possam trazer informações e benefícios aos alunos do ADS.</string>

    <!-- Itens Menus -->
    <string name="item_feedback">Feedback</string>
    <string name="item_mensagem">Mensagem</string>
    <string name="item_agendamento">Agendamento</string>
    <string name="item_alunos">Alunos</string>
    <string name="item_enviar_mensagem">Enviar Mensagem</string>
    <string name="item_notificacoes">Notificações</string>
    <string name="item_relatorios">Relatórios</string>
    <string name="item_profissional">Profissional</string>
    <string name="item_profissional_externo">Profissional Externo</string>
    <string name="item_local_atendimento">Local de Atendimento</string>
    <string name="item_horario_atendimento">Horário de Atendimento</string>
    <string name="item_responsavel">Responsavel</string>
    <string name="item_sair">Sair</string>
    <string name="item_alterar_senha">Alterar Senha</string>
    <string name="item_diagnostico">Diagnóstico</string>
    <string name="item_campo_atuacao">Campo de atuação</string>

    <!-- Sei la de onde saiu isso, mas não vou mexer pra não bugar tudo -->
    <string name="title_activity_menu_profissional">NAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_aluno">MenuAlunoActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Listas -->
    <string name="txt_bloco">Bloco: </string>
    <string name="txt_local">Local: </string>
    <string name="txt_data">Data:</string>
    <string name="txt_horario">Horário:</string>
    <string name="txt_status">Status:</string>
    <string name="txt_dia_da_semana">Dia da semana</string>

    <!-- Hints -->
    <string name="hint_campo_atuacao">Campo de atuação</string>
    <string name="hint_diagnostico">Diagnóstico</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_login">Login</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_horario">Horário</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_celular">Celular</string>
    <string name="hint_bloco">Bloco</string>
    <string name="hint_local">Local/Sala</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_endereco">Endereço</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_numero_casa">Número</string>
    <string name="hint_email">E-mail</string>

    <!-- Spinner -->
    <string name="btn_salvar">SALVAR</string>

    <!-- Buttons -->
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="msg_erro_cadastro">Erro ao cadastrar</string>
    <string name="msg_sucesso_cadastro">Cadastrado com sucesso</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_encaminhamento">Encaminhamento</string>
    <string name="btn_relatorio_feedback">Feedback</string>
    <string name="btn_relatorio_aluno">Aluno</string>
    <string name="btn_relatorio_profissional">Profissional</string>

    <string-array name="tipo_prof_array">
        <item>Administrador</item>
        <item>Profissional</item>
    </string-array>

    <string-array name="filtro_array">
        <item>Todos</item>
        <item>Pendentes</item>
        <item>Confirmados</item>
        <item>Atendidos</item>
        <item>Cancelados</item>
    </string-array>

</resources>
