<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agendamento"
            android:icon="@drawable/ic_agendamento"
            android:title="@string/item_agendamento" />
        <item
            android:id="@+id/nav_alunos"
            android:icon="@drawable/ic_alunos"
            android:title="@string/item_alunos" />
        <item
            android:id="@+id/nav_indicacoes"
            android:icon="@drawable/ic_indicacoes"
            android:title="@string/item_indicacoes_adicionais" />
        <item
            android:id="@+id/nav_relatorios"
            android:icon="@drawable/ic_relatorio"
            android:title="@string/item_relatorios" />
    </group>

    <item android:title="Cadastro">
        <menu>
            <item
                android:id="@+id/nav_diagnostico"
                android:icon="@drawable/ic_diagnostico"
                android:title="@string/item_diagnostico" />
            <item
                android:id="@+id/nav_campo_atuacao"
                android:icon="@drawable/ic_campo_atuacao"
                android:title="@string/item_campo_atuacao" />

            <item
                android:id="@+id/nav_profissional"
                android:icon="@drawable/ic_profissional"
                android:title="@string/item_profissional" />
            <item
                android:id="@+id/nav_profissional_externo"
                android:icon="@drawable/ic_profissional_externo"
                android:title="@string/item_profissional_externo" />
            <item
                android:id="@+id/nav_local_atendimento"
                android:icon="@drawable/ic_local_atendimento"
                android:title="@string/item_local_atendimento" />
            <item
                android:id="@+id/nav_horario_atendimento"
                android:icon="@drawable/ic_horario"
                android:title="@string/item_horario_atendimento" />
            <item
                android:id="@+id/nav_responsavel"
                android:icon="@drawable/ic_responsavel"
                android:title="@string/item_responsavel" />
        </menu>
    </item>

</menu>
